plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.vaadin)
    alias(libs.plugins.download)

    // Code quality plugins
    id 'checkstyle'
    id 'pmd'
    alias(libs.plugins.spotbugs)
    id 'jacoco'
    alias(libs.plugins.delta.coverage)
    alias(libs.plugins.pitest)
}

group = 'io.nextskip'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

// Enable reproducible builds
tasks.withType(AbstractArchiveTask).configureEach {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

// Enable dependency locking for all configurations
// This creates gradle.lockfile which Renovate uses to trigger postUpgradeTasks
dependencyLocking {
    lockAllConfigurations()
}

// Disable plain JAR generation - we only need the Spring Boot executable JAR
tasks.named('jar') {
    enabled = false
}

// Workaround: Delta coverage plugin + Vaadin causes bootJar to look for 'generate' task
// which doesn't exist. Create an alias to hillaGenerate to fix the conflict.
// See: https://github.com/gw-kit/delta-coverage-plugin/issues/172
tasks.register('generate') {
    dependsOn 'hillaGenerate'
    description = 'Alias for hillaGenerate (workaround for delta-coverage plugin compatibility)'
}

// Ensure Vaadin production resources are included in bootJar
// The vaadinBuildFrontend task writes to build/resources/main/ AFTER processResources,
// so we need to explicitly include these files in the bootJar
tasks.named('bootJar') {
    dependsOn 'vaadinBuildFrontend', 'downloadOtelAgent', 'downloadPyroscopeAgent'

    // Explicitly copy Vaadin production files into the JAR
    into('BOOT-INF/classes') {
        from('build/resources/main') {
            include 'META-INF/VAADIN/**'
            include 'META-INF/resources/**'
        }
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }
}

repositories {
    mavenCentral()  // Primary repository - fastest and most reliable

    // Vaadin addons repository (required for Vaadin components)
    maven {
        url 'https://maven.vaadin.com/vaadin-addons'
        content {
            includeGroup 'com.vaadin'
        }
    }

    // Pre-release repositories (only for SNAPSHOT builds)
    if (version.toString().contains('SNAPSHOT') || version.toString().contains('rc')) {
        maven {
            url 'https://maven.vaadin.com/vaadin-prereleases'
            content {
                includeGroup 'com.vaadin'
            }
        }
        maven {
            url 'https://repo.spring.io/milestone'
            content {
                includeGroupByRegex 'org\\.springframework.*'
            }
        }
    }
}

dependencyManagement {
    imports {
        mavenBom "com.vaadin:vaadin-bom:${libs.versions.vaadin.get()}"
    }
}

dependencies {
    // Vaadin with Hilla for React integration
    implementation libs.bundles.vaadin
    developmentOnly libs.vaadin.dev

    // Spring Boot starters (versions managed by Spring Boot BOM)
    implementation libs.bundles.spring.boot.web
    implementation libs.spring.boot.starter.webflux

    // Caching
    implementation libs.caffeine

    // Resilience4j for circuit breakers and retry logic
    implementation libs.bundles.resilience4j

    // Jackson XML
    implementation libs.jackson.dataformat.xml

    // iCal4j for calendar/event parsing
    implementation libs.ical4j

    // Jsoup for HTML parsing
    implementation libs.jsoup

    // Observability
    runtimeOnly libs.micrometer.registry.prometheus

    // Database
    implementation libs.spring.boot.starter.data.jpa
    runtimeOnly libs.postgresql
    implementation libs.spring.boot.starter.liquibase

    // Database observability
    implementation 'net.ttddyy.observation:datasource-micrometer-spring-boot:2.0.1'
    implementation 'org.hibernate.orm:hibernate-micrometer'

    // Scheduling
    implementation libs.db.scheduler.spring.boot.starter

    // SpotBugs annotations (for @SuppressFBWarnings)
    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.9.8'

    // Testing
    testImplementation libs.spring.boot.starter.test
    testImplementation libs.reactor.test
    testImplementation libs.wiremock.standalone

    // Testcontainers for database integration tests
    testImplementation libs.bundles.testcontainers

    // Java 25 compatibility - override Mockito and ByteBuddy
    testImplementation libs.mockito.core
    testImplementation libs.byte.buddy

    // Property-based testing
    testImplementation libs.jqwik
}

// OpenTelemetry agent configuration
def otelAgentVersion = libs.versions.grafana.otel.agent.get()
def otelAgentDir = layout.buildDirectory.dir("otel-agent")

tasks.register('downloadOtelAgent', Download) {
    description = 'Downloads the Grafana OpenTelemetry Java agent'
    group = 'observability'

    src "https://github.com/grafana/grafana-opentelemetry-java/releases/download/v${otelAgentVersion}/grafana-opentelemetry-java.jar"
    dest otelAgentDir.map { it.file("grafana-opentelemetry-java.jar") }
    overwrite false
    retries 3
}

// Pyroscope profiling agent configuration
def pyroscopeAgentVersion = libs.versions.pyroscope.agent.get()
def pyroscopeAgentDir = layout.buildDirectory.dir("pyroscope-agent")

tasks.register('downloadPyroscopeAgent', Download) {
    description = 'Downloads the Pyroscope Java profiling agent'
    group = 'observability'

    src "https://github.com/grafana/pyroscope-java/releases/download/v${pyroscopeAgentVersion}/pyroscope.jar"
    dest pyroscopeAgentDir.map { it.file("pyroscope.jar") }
    overwrite false
    retries 3
}

tasks.named('test') {
    useJUnitPlatform()

    // Parallel test execution for faster CI builds
    // GitHub runners have 4 cores, so run up to 4 test JVMs in parallel
    maxParallelForks = Runtime.runtime.availableProcessors()
    // Fork new JVM every 50 tests to prevent memory leaks
    forkEvery = 50

    // Required for Java 25 compatibility with Mockito/ByteBuddy
    // --add-opens: Allows reflective access to JDK internals
    // --enable-native-access: Allows JNA native library loading
    // -XX:+EnableDynamicAgentLoading: Allows ByteBuddy agent attachment
    // -Dnet.bytebuddy.experimental=true: Enables ByteBuddy's experimental Java 25 support
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
        '--enable-native-access=ALL-UNNAMED',
        '-XX:+EnableDynamicAgentLoading',
        '-Dnet.bytebuddy.experimental=true'
    ]
}

configurations.all {
    resolutionStrategy {
        // Exclude old google-collections in favor of guava
        // Required: Checkstyle transitively depends on google-collections which conflicts with guava
        exclude group: 'com.google.collections', module: 'google-collections'
    }
}

// Code quality plugin configurations

// NOTE: Using direct string literals instead of version catalog accessors (libs.versions.X.get())
// to enable Renovate detection until native support is added.
// See: https://github.com/renovatebot/renovate/discussions/40147
// Can be reverted to catalog accessors if Renovate adds native support.
checkstyle {
    toolVersion = "12.3.1"
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = false  // Quality violations fail the build
}

pmd {
    toolVersion = "7.20.0"
    ruleSets = []  // Empty to use custom ruleset file
    ruleSetFiles = files("${rootDir}/config/pmd/ruleset.xml")
    ignoreFailures = false  // Quality violations fail the build
}

spotbugs {
    toolVersion = "4.9.8"
    effort = 'max'
    reportLevel = 'medium'
    ignoreFailures = false  // Quality violations fail the build
    excludeFilter = file("${rootDir}/config/spotbugs/spotbugs-exclude.xml")
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    reports {
        html.required = true
        xml.required = true  // Enable for CI integration
    }
}

jacoco {
    toolVersion = "0.8.14"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.75  // 75% instruction coverage
            }
        }
        rule {
            limit {
                counter = 'BRANCH'
                minimum = 0.65  // 65% branch coverage
            }
        }
    }
}

// Delta coverage: enforce coverage on changed code (PR patch coverage)
deltaCoverageReport {
    diffSource.git.compareWith 'refs/remotes/origin/main'

    reportViews.test.violationRules {
        failIfCoverageLessThan(0.80d)
        failOnViolation.set(true)
    }

    // Report generation
    reports {
        html.set(true)
        xml.set(true)
        markdown.set(true)
    }
}

pitest {
    targetClasses = ['io.nextskip.*']
    targetTests = ['io.nextskip.*']
    mutators = ['DEFAULTS']
    // Dynamic thread allocation: use 75% of available cores, minimum 2
    def availableCores = Runtime.runtime.availableProcessors()
    def pitestThreads = Math.max(2, (int) (availableCores * 0.75))
    threads = pitestThreads
    outputFormats = ['HTML', 'XML']
    timestampedReports = false
    junit5PluginVersion = '1.2.1'
    // Incremental analysis: reuse results for unchanged code
    historyInputLocation = file("${rootDir}/.pitest-history")
    historyOutputLocation = file("${rootDir}/.pitest-history")
    // Fail build if mutation score drops below threshold
    mutationThreshold = 75
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--enable-native-access=ALL-UNNAMED',
        '-XX:+EnableDynamicAgentLoading',
        '-Dnet.bytebuddy.experimental=true'
    ]
}

// Enable coverage verification in check task for local feedback
// Skip locally if needed: ./gradlew check -x jacocoTestCoverageVerification -x deltaCoverage -x pitest
tasks.named('check') {
    dependsOn jacocoTestCoverageVerification
    dependsOn deltaCoverage
    dependsOn tasks.named('pitest')
}

// Vaadin's vaadinPrepareFrontend runs npm install but doesn't declare
// package-lock.json as an input. This causes Gradle's build cache to
// restore stale outputs when new npm dependencies are added.
// Adding package-lock.json as an input ensures the cache invalidates
// when dependencies change.
plugins.withId('com.vaadin') {
    tasks.named('vaadinPrepareFrontend') {
        inputs.file('package-lock.json').withPathSensitivity(PathSensitivity.RELATIVE)
    }
}
